# isae-practical-deep-learning

./: .gitignore  0_cnns.ipynb  1_hands_on.ipynb  1_hands_on.py.ipynb  1_session_1_hands_on.ipynb  2_dealing_with_class_imbalance.ipynb  2_session_2_dealing_with_class_imbalance.ipynb  2_sliding_window.ipynb  3_dealing_with_class_imbalance.ipynb  3_session_2_sliding_window.ipynb  3_sliding_window.ipynb  README.md
docs/: index.html  slides.html
docs/css/: style.css
docs/static/css/: theme.css
teacher/: 0_cnns.py  0_nns_and_cnns.py  1_hands_on.py  1_session_1_hands_on.py  2_dealing_with_class_imbalance.py  2_session_2_dealing_with_class_imbalance.py  2_sliding_window.py  3_dealing_with_class_imbalance.py  3_more_complex_example.py  3_session_2_sliding_window.py  3_sliding_window.py  4_classification_to_dense.py  Makefile  README.md  build_docs_pdf.sh  build_docs_serve.sh  build_docs_site.sh  data_exploration.py  generate_student_dataset_eval_tiles.py  generate_student_dataset_large.py  generate_student_dataset_toy.py  get_data.py  pyproject.toml  t1_generate_student_dataset_toy.py  t2_generate_student_dataset_large.py  t3_generate_student_dataset_eval_tiles.py
teacher/docs/: slides.md
teacher/docs/static/: style.css
teacher/docs/static/template/: listing.html  reveal.html
teacher/slides/: slides.md
teacher/slides/static/: style.css
teacher/src/: MANIFEST.in  README.md  pyproject.toml  requirements.extras.json  requirements.txt  setup.cfg  setup.py
teacher/src/khumeia/: __init__.py
teacher/src/khumeia/data/: __init__.py  dataset.py  item.py
teacher/src/khumeia/helpers/: __init__.py  data_download.py  dataset_generation.py  download_data.py  prediction.py  visualisation.py
teacher/src/khumeia/inference/: __init__.py  engine.py  metrics.py  predictor.py
teacher/src/khumeia/roi/: __init__.py  bounding_box.py  groundtruth.py  sliding_window.py  tile.py  tiles_dumper.py  tiles_generator.py  tiles_sampler.py
teacher/src/khumeia/utils/: __init__.py  io_utils.py  roi_list_utils.py  roi_utils.py
teacher/src/tests/: test_bbox.py
