[metadata]
name = khumeia
version = 1.1.0
url = https://github.com/fchouteau/isae-practical-deep-learning
download_url = https://github.com/fchouteau/isae-practical-deep-learning
description = Framework for a hands on with Deep Learning & aircrafts detection at ISAE-SUPAERO
long_description = file: README.md
long_description_content_type = text/markdown
author = Florient CHOUTEAU & Matthieu LE GOFF
author_email = florient.chouteau@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific / Engineering:: Remote Sensing
    Topic :: Utilities
    Operating System :: POSIX
    Operating System :: Unix


[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    geojson
    ipython
    joblib
    jupyter
    numpy
    opencv-python
    pandas
    scikit-image
    scikit-learn
    scipy
    rtree
    tqdm
    loguru

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.extras_require]
test =
    shapely
    pytest
    pytest-cov
    flake8

# all will be the full "batteries included" extra.
# though for now, it's just the GUI backend
all =
    %(test)s
